Add JRE-compatible executable JAR